--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,14 @@ Flask-WTF==1.2.1
 greenlet==3.0.3
 gunicorn==22.0.0
 idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==24.0
+pluggy==1.5.0
 psycopg2-binary==2.9.9
+pytest==8.2.0
 SQLAlchemy==2.0.29
 typing_extensions==4.10.0
 Werkzeug==3.0.2
