--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DATABASE_URL: ${{ secrets.DATBASE_URL }}
+      DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URI}}
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
     steps:
