--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
+coverage==7.5.1
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
@@ -20,6 +21,7 @@ packaging==24.0
 pluggy==1.5.0
 psycopg2-binary==2.9.9
 pytest==8.2.0
+pytest-cov==5.0.0
 SQLAlchemy==2.0.29
 typing_extensions==4.10.0
 Werkzeug==3.0.2
