--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 bcrypt==4.1.2
 blinker==1.7.0
+Brotli==1.1.0
+cffi==1.16.0
 click==8.1.7
 coverage==7.5.1
+cssselect2==0.7.0
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
@@ -10,19 +13,31 @@ Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+flask_weasyprint==1.1.0
+fonttools==4.51.0
 greenlet==3.0.3
 gunicorn==22.0.0
+html5lib==1.1
 idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==24.0
+pillow==10.3.0
 pluggy==1.5.0
 psycopg2-binary==2.9.9
+pycparser==2.22
+pydyf==0.10.0
+pyphen==0.15.0
 pytest==8.2.0
 pytest-cov==5.0.0
+six==1.16.0
 SQLAlchemy==2.0.29
+tinycss2==1.3.0
 typing_extensions==4.10.0
+weasyprint==62.1
+webencodings==0.5.1
 Werkzeug==3.0.2
 WTForms==3.1.2
+zopfli==0.2.3
